selfhost/test/typechecker/map/error_unfilled_holes.1.abra
val m = { (None): 123 }